welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: ';' expected but 'else' found.
                    else {if (getX()==6) {diag+=1;setPos(diag,6)}} else {setPos(getX()+1,getY()-1)}} ;ecritMessage(""+compt);compt+=1 
                                                                   ^